# robotics-prototype

./: .clang-format  .dockerignore  .envrc  .eslintrc  .gitignore  .gitmodules  .pylintrc  .style.yapf  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  Dockerfile  EnvironmentSetup.sh  PREPEND-README.md  PULL_REQUEST_TEMPLATE.md  README.md  RobotArm.ino  activatevenv  armWorkSpace.m  branch-name-verification.py  branch-name-verification.sh  branch_name_verification.py  branch_name_verification_hook.py  commit-message-hook-bak.py  commit-message-hook.sh  commit_message_hook.py  frames_2025-01-29_15.30.19.gv  install_arduino_teensyduino.sh  install_ros.sh  install_ros_kinetic.sh  launch-camera-stream.sh  os1-992005000098-metadata.json  package-lock.json  package.json  pull_request_template.md  pytest.ini  requirements-dev.txt  requirements-rover.txt  requirements.txt  (+2 more)
new-code/src/wheels_controller/: CMakeLists.txt  package.xml
new-code/src/wheels_controller/src/: test.cpp  wheels_controller_node.cpp  wheels_controller_node.h
robot/libraries/ik-solver/: CMakeLists.txt
robot/libraries/ik-solver/include/: ik-solver.h
robot/libraries/ik-solver/src/: ik-solver.c
robot/libraries/ik-solver/unitTests/: ik-solver-test.cpp
robot/rospackages/src/absenc_interface/: CMakeLists.txt  package.xml
robot/rospackages/src/arm/: CMakeLists.txt  package.xml
robot/rospackages/src/arm_control/: CMakeLists.txt  package.xml
robot/rospackages/src/arm_controller/: CMakeLists.txt  package.xml
robot/rospackages/src/aruco_search/: CMakeLists.txt  package.xml
robot/rospackages/src/asimov_simplified/: CMakeLists.txt  arm_states_republisher.py  package.xml
robot/rospackages/src/astro_arm/: CMakeLists.txt  arm_states_republisher.py  package.xml
robot/rospackages/src/camera_vision/: CMakeLists.txt  package.xml  setup.cfg  setup.py
robot/rospackages/src/colarm/: CMakeLists.txt  colarm.launch  package.xml
robot/rospackages/src/collarm/: CMakeLists.txt  collarm.launch  package.xml
robot/rospackages/src/colllarm/: CMakeLists.txt  colllarm.launch  colllarm_full.launch  colllarm_venv.launch  package.xml
robot/rospackages/src/gps/: CMakeLists.txt  package.xml
robot/rospackages/src/mcu_control/: CMakeLists.txt  package.xml
robot/rospackages/src/messages_and_services/: CMakeLists.txt  package.xml
robot/rospackages/src/mux_selector/: CMakeLists.txt
robot/rospackages/src/nir/: CMakeLists.txt  package.xml
robot/rover/: ArmCommandListener.py  CMakeLists.txt  CMakeTemplate.txt.in  Listener.py  Logger.py  README.md  RoverCommandListener.py  RoverListener.py  RoverSetup.sh  SensorDataReader.py  ServerConnection.py  ServerListener.py  StreamDispatcher.py  generic-gcc-avr.cmake  install_arduino_libraries.sh  install_libary.sh  install_teensy_loader_cli.sh  start_stream.sh  test.py  test.sh
robot/rover/Arm/: Arm.ino  CMakeLists.txt  Ideas.h  Includes.h  Notes.h  PidController.h  PinSetup.h  README.md  Vsense.h  oldArmCode
robot/rover/Arm/include/: ArmDebug.h  DcMotor.h  (+9 more)
robot/rover/ArmDriverUnit/: ArmDriverUnit.ino  ArmMotor - Copy.h  ArmMotor.cpp  ArmMotor.h  Arm_Teensy_Motor_Wiring_Diagrams.docx  DCMotor.h  DcMotor.h  Debouncer.h  Ideas.h  Includes.h  Notes.h  Parser.h  PidController.h  PinSetup.cpp  PinSetup.h  RobotMotor.h  RobotPID.h  RoverMotor.h  SerialParser.cpp  ServoMotor.h  StepperMotor.h  Teensy commands and functionality.txt  Vsense.h  abtin_code.txt  josh notes.txt  pins.xlsx  ~$m_Teensy_Motor_Wiring_Diagrams.docx
robot/rover/DcExampleTwoMotors/: PinSetup.h  RobotMotor.h
robot/rover/Demos/: README.md
robot/rover/Drill/: Drill.ino
robot/rover/Drill_Bluetooth/: Drill_Bluetooth.ino
robot/rover/Drill_Final/: Drill_Final.ino
robot/rover/Examples/: README.md
robot/rover/LIBS/: CMakeLists.txt  LIBS.ino
robot/rover/MobilePlatform/: CMakeLists.txt  Commands.cpp  Core.cpp  Core.h  Helpers.cpp  Helpers.h  MobilePlatform.ino  PidController.h  README.md  Vsense.h  commands.cpp  commands.h  helpers.h  motors.h  navigation.h  pins.h
robot/rover/MotorCharacterization/: MotorCharacterization.ino  stepResponse.xlsx
robot/rover/PDS/: CMakeLists.txt  PDS.ino  PDSCommandCenter.cpp  PDSCommandCenter.h  PDS_test.ino  README.md  load_setup.cpp  load_setup.h  parse_command.h  temp_read.cpp
robot/rover/PidController/: CMakeLists.txt  PidController.ino  README.md
robot/rover/RoverControlDemo/: RoverControlDemo.ino
robot/rover/Science/: CMakeLists.txt  Science.ino
robot/rover/ServoExample/: PinSetup.h  ServoExample.ino
robot/rover/ServoExampleOpenLoop/: PinSetup.cpp  ServoMotor.h
robot/rover/SimpleServoTest/: SimpleServoTest.ino
robot/rover/SkidSteering/: ArduinoBlue.cpp  DcMotor.h  KeyboardSkidSteering.ino  PidController.h  README.md  SkidSteering.ino  Vsense.h  commands.h
robot/rover/SkidSteering (OLD)/: ArduinoBlue.cpp  ArduinoBlue.h  ClientSenderLocal.py  DcMotor.h  ServerListenerLocal.py  SkidSteering.ino  commands.h
robot/rover/SkidSteering2/: SkidSteering2.ino  Vsense.h  commands.h  helpers.h  motors.h  navigation.h  pins.h
robot/rover/TeensyBlinkLEDSerial/: TeensyBlinkLEDSerial.ino
robot/rover/WheelsTesting/: CMakeLists.txt  WheelsTesting.ino
robot/rover/comms/: CMakeLists.txt
robot/rover/comms_demo/: CMakeLists.txt  comms_demo.ino  demo_sender.py  pong_bing.ino
robot/rover/config/: .bash_aliases  .nanorc  README.md  my-webcams.rules  rc.local
robot/rover/gpio/: 99-com.rules  README.md  rc.local
robot/rover/gps/: CMakeLists.txt
robot/rover/internal_comms/: CMakeLists.txt  README.md
robot/rover/limit_switch_test/: limit_switch_test.ino
robot/rover/limit_switch_test2/: limit_switch_test2.ino
robot/rover/ping_acknowledgment/: CMakeLists.txt
robot/rover/power-analysis/: README.md  csv_generator.sh  initial_scrape.sh
robot/rover/science/: CMakeLists.txt  Carousel.cpp  Carousel.h  Laser.cpp  raman.ino  science.ino
robot/rover/smart_servo/: CMakeLists.txt
robot/rover/systemd/: arm-command-listener.path  arm-command-listener.service  config-ethernet.service  ip-emailer.service  lidar-dhcp-server.service  ros-rover-start.service
(+2310 files in other folders)
